# my_cpp_boilerplate

./: CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  first_setup.sh
.github/workflows/: build.yml
src/: main.cpp
src/lib/: lib.cpp
